# hl7-ls

./: Cargo.toml  README.md  bad.hl7  example_workspace.hl7v.toml  load.lua  sample.hl7v.toml
src/: cli.rs  code_actions.rs  codelens.rs  commands.rs  completion.rs  diagnostics.rs  docstore.rs  document_symbols.rs  hover.rs  main.rs  selection_range.rs  signature_help.rs  spec.rs  utils.rs
src/_spec/: mod.rs
src/commands/: encode_decode_selection.rs  encode_decode_text.rs  generate_control_id.rs  mod.rs  send_message.rs  set_to_now.rs
src/spec/: mod.rs
src/validation/: datatypes.rs  length.rs  mod.rs  msh.rs  optionality.rs  table_values.rs  timestamps.rs
src/workspace/: mod.rs  specs.rs
