[package]
name = "hl7-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
hl7-definitions = { git = "https://github.com/hamaluik/hl7-definitions.git", version = "0.0.2" }
hl7-parser = { git = "https://github.com/hamaluik/hl7-parser.git", branch = "v030", features = ["chrono"] }
lsp-server = "0.7.7"
lsp-textdocument = "0.4.0"
lsp-types = "0.97.0"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
