[package]
name = "hl7-ls"
version = "1.0.0-pre"
edition = "2021"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A Language Server for HL7 messages"
license = "Apache-2.0"
repository = "https://github.com/hamaluik/hl7-ls"
readme = "README.md"
keywords = ["hl7", "lsp", "language-server", "language-server-protocol"]
categories = ["development-tools"]

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
color-eyre = "0.6.3"
crossbeam-channel = "0.5.14"
dashmap = "6.1.0"
hl7-definitions = { git = "https://github.com/hamaluik/hl7-definitions.git", version = "0.0.2" }
hl7-parser = { version = "0.3.0", features = ["chrono", "serde"] }
lsp-server = "0.7.8"
lsp-textdocument = "0.4.1"
lsp-types = "0.97.0"
notify = { version = "7.0.0", features = ["crossbeam-channel"] }
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.12.0"
thiserror = "2.0.11"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
